--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -249,8 +249,28 @@ body {
         background: #4aaaa5;
         margin-left: 30px;
       }
+
+        nav {
+            float: right;
+            margin-top: 25px;
+            margin-right: 10px;
+          }
+          
+          nav a {
+            display: inline-block;
+            padding-left: 15px;
+            margin-left: 15px;
+            line-height: 18px;
+            color: #999;
+            text-decoration: none;
+            border-left: 1px solid #efefef;
+          }
+
+
+
+      }
     
-}
+
 
 @media screen and (max-width: 769px) {
 
@@ -305,7 +325,7 @@ body {
             width: 100%;
             height: 90px;
             font-family: Georgia, Times, "Times New Roman", serif;
-            font-size: 30px;
+            font-size: 50px;
             font-weight: 700;
             line-height: 90px;
             color: #fff;
@@ -318,6 +338,7 @@ body {
           nav {
             margin-top: 0px;
            /* margin-left: 165px;*/
+           margin-right: 178px;
           }
           
           nav a {
@@ -328,6 +349,7 @@ body {
             color: #999;
             text-decoration: none;
             border-left: 1px solid #efefef;
+            font-size: 22px;
           }
           
           nav a:first-child {
@@ -336,21 +358,19 @@ body {
 
           .main-section {
             float: left;
-            width: 100%;
+            width: 575px;
             max-width: 960px;
             padding: 30px;
-            margin: 0 0 40px;
+            margin:17px 17px 40px;
             background: #fff;
             border: 1px solid #ddd;
 
         }
 
-
-
         .work {
             position: relative;
             float: left;
-            width: 274px;
+            width: 500px;
             margin: 20px 0 25px;
             overflow: auto;
           }
@@ -385,6 +405,10 @@ body {
             height: auto;
             margin-top: 10px;
             margin-right: 25px;
+          }
+
+          h1{
+              font-size: 45px;
           }
           
     }
